--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@typegoose/typegoose": "^10.0.0",
+    "aws-sdk": "^2.1387.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "ts-node": "^10.9.1",
-    "aws-sdk": "^2.1387.0"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
