--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
     "@typegoose/typegoose": "^10.0.0",
     "aws-sdk": "^2.1387.0",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
-    "ts-node": "^10.9.1",
-    "xlsx": "^0.18.5"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
