--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
